# security-framework

./: .gitignore  .prettierrc.yml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
iostest/: Cargo.toml
iostest/src/: lib.rs
iostest/tests/: ios_macos.rs
security-framework/: Cargo.toml
security-framework-sys/: .rustfmt.toml  Cargo.toml
security-framework-sys/src/: access_control.rs  authorization.rs  base.rs  certificate.rs  code_signing.rs  digest_transform.rs  encrypt_transform.rs  identity.rs  import_export.rs  key.rs  keychain.rs  keychain_item.rs  lib.rs  policy.rs  random.rs  secure_transport.rs  transform.rs  trust.rs  trust_settings.rs
security-framework/examples/: client.rs  find_internet_password.rs  secure_random.rs  set_internet_password.rs  tls_client.rs  tls_client_trust_cert.rs
security-framework/src/: access_control.rs  authorization.rs  base.rs  certificate.rs  cipher_suite.rs  dlsym.rs  identity.rs  import_export.rs  item.rs  key.rs  lib.rs  passwords.rs  passwords_options.rs  policy.rs  random.rs  secure_transport.rs  trust.rs  trust_settings.rs
security-framework/src/os/macos/: access.rs  certificate.rs  certificate_oids.rs  code_signing.rs  digest_transform.rs  encrypt_transform.rs  identity.rs  import_export.rs  item.rs  key.rs  keychain.rs  keychain_item.rs  mod.rs  passwords.rs  secure_transport.rs  transform.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
