[package]
name = "iostest"
version = "0.1.0"
publish = false
edition = "2021"
rust-version = "1.60"

[lib]
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.9.3"
security-framework = { path = "../security-framework" }
security-framework-sys = { path = "../security-framework-sys" }

[dev-dependencies]
rand = "0.8.5"
serial_test = "2.0.0"

[package.metadata.release]
release = false
