[package]
name = "security-framework-sys"
version = "2.9.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
description = "Apple `Security.framework` low-level FFI bindings"
categories = ["os::macos-apis", "external-ffi-bindings"]
keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
repository = "https://github.com/kornelski/rust-security-framework"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passive-maintainance" }

[features]
default = ["OSX_10_9"]
OSX_10_9 = []
OSX_10_10 = ["OSX_10_9"]
OSX_10_11 = ["OSX_10_10"]
OSX_10_12 = ["OSX_10_11"]
OSX_10_13 = ["OSX_10_12"]
OSX_10_14 = ["OSX_10_13"]
OSX_10_15 = ["OSX_10_14"]

[dependencies]
core-foundation-sys = "0.8.3"
libc = "0.2.139"
