[package]
name = "apple-security-framework"
version = "2.9.2"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Kornel <kornel@geekhood.net>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Apple `Security.framework` bindings for macOS and iOS"
categories = ["os::macos-apis", "cryptography", "api-bindings"]
keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
repository = "https://github.com/x52dev/apple-security-framework"
license = "MIT OR Apache-2.0"
exclude = ["test/*"]
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passive-maintainance" }

[features]
default = ["OSX_10_9"]
alpn = []
session-tickets = []
job-bless = []
# deprecated, do not use
serial-number-bigint = ["dep:num-bigint"]

OSX_10_9 = ["apple-security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "apple-security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "apple-security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "apple-security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "apple-security-framework-sys/OSX_10_13", "alpn", "session-tickets", "serial-number-bigint"]
OSX_10_14 = ["OSX_10_13", "apple-security-framework-sys/OSX_10_14"]
OSX_10_15 = ["OSX_10_14", "apple-security-framework-sys/OSX_10_15"]

nightly = [] # not used, doesn't do anything, only for back compat

[dependencies]
apple-security-framework-sys = { version = "2.9", default-features = false, path = "../security-framework-sys" }
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"
bitflags = "2"
libc = "0.2.139"
log = { version = "0.4.17", optional = true }
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
env_logger = "0.10"
hex = "0.4"
time = "0.3.17"
tempfile = "3.3"
x509-parser = "0.15"
