[package]
name = "systest"
version = "0.0.0"
publish = false
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
rust-version = "1.60"

[package.metadata.release]
release = false

[dependencies]
core-foundation-sys = "0.8"
security-framework-sys = { path = "../security-framework-sys" }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"

[features]
OSX_10_9 = ["security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13"]
